minio/k8s-manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-storage
  labels:
    app: minio-storage
spec:
  ports:
  - name: http-svc 
    protocol: TCP
    port: 9000
    targetPort: http-svc
  - name: http-console
    protocol: TCP
    port: 9090
    targetPort: http-console
  selector:
    app: minio-storage
  type: ClusterIP
